# appforge-poc

./: .env.example  .gitignore  AGENTS.md  AGENT_ISSUE_TEMPLATE.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  appforge-creds.json  initial_setup_instructions.md  project_architecture.md  pyproject.toml  terraform-apply.skill
.github/workflows/: ci.yml
docs/: ONBOARDING.md  agent-issue-sdk.md  appforge_issue_management.md  architecture.md  claude_cli_options.md  creating-agent-issues.md  difficulty-based-models.md  gcloud-cheatsheet.md  gcp-deploy.md  github-labels-and-protocol.md  github-mcp-setup.md  github_project_management_spec.md  issue-creation-workflow.md  issue-readiness-protocol.md  local-dev.md  production-readiness.md  tmux-how-it-works.md  twilio-notifications.md
infra/scripts/: bootstrap_gcp.sh  deploy_vm.sh  startup.sh
infra/terraform/: iam.tf  main.tf  scheduler.tf  secrets.tf  vm.tf
prompts/: cli_pr_comment_prompt.md  cli_system_prompt.md
scripts/: dump_tmux_logs.py  run_agent_pool.py  run_issue_harness.py
skills/appforge-cli-issue-management/: SKILL.md
skills/appforge-manager-issue-management/: SKILL.md
skills/blocked-task-handling/: SKILL.md
skills/claude-cli-pr-completion/: SKILL.md
skills/github-issue-creation/: SKILL.md
skills/github-issue-workflow/: SKILL.md
skills/issue-harness/: SKILL.md
skills/new-project-setup/: SKILL.md
skills/project-architecture-doc/: SKILL.md
tests/: test_agent_issue_sdk.py  test_git_ops.py  test_issue_protocol.py  test_model_selector.py  test_state_machine.py  test_twilio_client.py
(+41 files in other folders)
